--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "symfony/maker-bundle": "^1.1",
         "symfony/orm-pack": "^1.0",
         "symfony/profiler-pack": "^1.0",
+        "symfony/security-bundle": "^3.4",
         "symfony/yaml": "^3.4"
     },
     "require-dev": {
