add User entity and configure SecurityController for login

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,25 +1,31 @@
 security:
-    # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
+    # https://symfony.com/doc/current/book/security.html#where-do-users-come-from-user-providers
     providers:
-        in_memory: { memory: ~ }
+         our_db_provider:
+            entity:
+                class: App\Entity\User
+                property: username
     firewalls:
         dev:
-            pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
-            anonymous: true
+            pattern: ^/
+            anonymous: ~
             http_basic: ~
+            form_login:
+                login_path: login
+                check_path: login
+            http_basic: ~
+            provider: our_db_provider
+
+    access_control:
+           # require ROLE_ADMIN for /admin*
+           - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
 
             # activate different ways to authenticate
 
-            # http_basic: true
-            # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
+            # http_basic: ~
+            # https://symfony.com/doc/current/book/security.html#a-configuring-how-your-users-will-authenticate
 
-            # form_login: true
-            # https://symfony.com/doc/current/security/form_login_setup.html
-
-    # Easy way to control access for large sections of your site
-    # Note: Only the *first* access control that matches will be used
-    access_control:
-        - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+            # form_login: ~
+            # https://symfony.com/doc/current/cookbook/security/form_login_setup.html
