--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "symfony/orm-pack": "^1.0",
         "symfony/profiler-pack": "^1.0",
         "symfony/security-bundle": "^3.4",
+        "symfony/security-csrf": "^3.4",
         "symfony/yaml": "^3.4"
     },
     "require-dev": {
