--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "symfony/profiler-pack": "^1.0",
         "symfony/security-bundle": "^3.4",
         "symfony/security-csrf": "^3.4",
+        "symfony/swiftmailer-bundle": "^3.2",
         "symfony/validator": "^3.4",
         "symfony/yaml": "^3.4"
     },
