add targetDirectory service Upload file and edit twig

--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -4,3 +4,4 @@ twig:
     strict_variables: '%kernel.debug%'
     globals:
         avatars_folder: '/uploads/avatars'
+        illustrations_folder: '/uploads/illustrations'
