--- a/config/packages/dev/swiftmailer.yaml
+++ b/config/packages/dev/swiftmailer.yaml
@@ -1,4 +1,3 @@
 # See https://symfony.com/doc/current/email/dev_environment.html
 swiftmailer:
-    # send all emails to a specific address
-    delivery_addresses: ['aline.delettre4@gmail.com']
+    # send all emails to a specific addre
